# rigveda

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  Explore.py  IMPLEMENTATION_SUMMARY.md  PROJECT_PLAN.md  QUICKSTART.md  README.md  README_WEBAPP.md  SETUP_GUIDE.md  UI_FLOW.md  analysis.txt  demo.py  plan.md  pyproject.toml  relationship_builder.py  requirements.txt  rigveda_data.json  rigveda_entity_analyzer.py  rigveda_relationship_analyzer.py  rigveda_scraper.py  run_data_processing.sh  run_server.py  setup_backend.sh  setup_frontend.sh  start_all.sh  start_server.sh  stopwords.txt  title_map.json  titles.md  vercel.json  word_dashboard.py  word_frequencies.json  word_list.db
Data/: Explore.py  assign_hymn_deities.py  count_hymn_words.py  count_total_words.py  create_deity_colors.py  hymn_similarity.py  query_semantic_similarity.py  semantic_similarity.py  summarize_hymns_groq.py  tempCodeRunnerFile.py  update_deity_scores.py  visualize_hymns.py
Data/JSONMaps/: deity_colors.json  rigveda_summaries.json
Results/: deity_analysis.txt  entity_relationships.json  important_words.txt  nltk.txt  relationship_summary.txt
WordProcessing/: Explore.py  hymn_similarity.py  word_dashboard.py  word_processor.py
api/: index.py
backend/app/: crud.py  db.py  main.py  models.py  schemas.py
frontend/: app.js  index.html
rigveda-explorer/: .gitignore  README.md  package-lock.json  package.json
rigveda-explorer/app/: globals.css  layout.tsx  page.tsx
rigveda-frontend/: package-lock.json  package.json
rigveda_backend/: manage.py
templates/: dashboard.html
(+1052 files in other folders)
