[project]
name = "rigveda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "sqlalchemy-libsql>=0.1.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "flask>=3.1.2",
    "numpy>=2.3.3",
    "pip>=25.2",
    "tqdm>=4.67.1",
    "orjson>=3.9.5"
]
